# nest-compiler

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE_ETRI  LICENSE_ETRI.kor  README.md
examples/bundles/: CMakeLists.txt
examples/bundles/alexnet/: CMakeLists.txt  main.cpp
examples/bundles/densenet/: CMakeLists.txt  main.cpp
examples/bundles/densenet_relay/: CMakeLists.txt  main.cpp
examples/bundles/efficientnet_lite4/: CMakeLists.txt  main.cpp
examples/bundles/googlenet_partition_multivta/: CMakeLists.txt  main.cpp
examples/bundles/googlenet_v4/: CMakeLists.txt  main.cpp
examples/bundles/googlenet_v4_relay/: CMakeLists.txt  main.cpp
examples/bundles/inception_v1/: CMakeLists.txt  main.cpp
examples/bundles/inception_v1_relay/: CMakeLists.txt  main.cpp
examples/bundles/mnasnet/: CMakeLists.txt  main.cpp
examples/bundles/mnasnet_relay/: CMakeLists.txt  main.cpp
examples/bundles/mobilenet/: CMakeLists.txt  main.cpp
examples/bundles/mobilenet_relay/: CMakeLists.txt  main.cpp
examples/bundles/partition_net/: CMakeLists.txt  main.cpp
examples/bundles/relay_cpu_partition/: CMakeLists.txt  main.cpp  main_template.h
examples/bundles/relay_cpu_partition2/: CMakeLists.txt  main.cpp  main_template.h
examples/bundles/relay_cpu_partition3/: CMakeLists.txt  main.cpp  main_header_test.h
examples/bundles/relay_cpu_partition4/: CMakeLists.txt  main.cpp  main_header_test.h  main_template.h
examples/bundles/relay_multi/: CMakeLists.txt  ex_multi.onnx
examples/bundles/resnet18/: CMakeLists.txt  main.cpp
examples/bundles/resnet18_nhwc/: CMakeLists.txt  main.cpp
examples/bundles/resnet18_relay/: CMakeLists.txt  deploy.cc
examples/bundles/resnet18_relay_aarch64/: CMakeLists.txt  deploy.cc
examples/bundles/resnet18_relay_cuda/: CMakeLists.txt
examples/bundles/resnet18_relay_opencl/: CMakeLists.txt  deploy.cc
examples/bundles/resnet18_relay_qnn/: CMakeLists.txt  deploy.cc
examples/bundles/resnext101/: CMakeLists.txt  main.cpp
examples/bundles/resnext50/: CMakeLists.txt  main.cpp
examples/bundles/resnext50_relay/: CMakeLists.txt  main.cpp
examples/bundles/shufflenet/: CMakeLists.txt  main.cpp
examples/bundles/shufflenet_relay/: CMakeLists.txt  main.cpp
examples/bundles/squeezenet/: CMakeLists.txt  main.cpp
examples/bundles/squeezenet_relay/: CMakeLists.txt  main.cpp
examples/bundles/vgg16_cifar10/: CMakeLists.txt  customized_gen_pruned_model3.py  from_torch_to_onnx.py  main.cpp  pruned_vgg_maxpool.py  vgg.py
examples/bundles/vgg19/: CMakeLists.txt  main.cpp
examples/bundles/vgg19_relay/: CMakeLists.txt  main.cpp
examples/bundles/vta_cpu_partition_net/: CMakeLists.txt  main.cpp
examples/bundles/zfnet/: CMakeLists.txt  main.cpp
examples/bundles/zfnet_relay/: CMakeLists.txt  main.cpp
examples/newton_bundles/: CMakeLists.txt
examples/newton_bundles/FCTest1/: CMakeLists.txt  newtonFCTest1BundleMain.cpp
examples/newton_bundles/FCTest2/: CMakeLists.txt  newtonFCTest2BundleMain.cpp
examples/newton_bundles/FCTest2_3/: CMakeLists.txt  newtonFCTest2_3BundleMain.cpp
examples/newton_bundles/FCTest4/: CMakeLists.txt  newtonFCTest4BundleMain.cpp
examples/openedge_bundles/: CMakeLists.txt
examples/openedge_bundles/ConvTest/: CMakeLists.txt  GoldenTest.yaml  enlightConvTest.yaml
examples/openedge_bundles/mobilenetTest/: CMakeLists.txt  mobilenetGoldenTest.yaml
examples/openedge_bundles/onnxYamlParserValTest/: CMakeLists.txt
examples/openedge_bundles/resnet50/: CMakeLists.txt
examples/openedge_bundles/resnet50Test/: CMakeLists.txt  resnetGoldenTest.yaml
tests/CCodeGenTest/: .cproject  .project  CMakeLists.txt
tests/CCodeGenTest/Debug/: makefile
tests/CCodeGenTest/Release/: makefile  objects.mk
tests/CCodeGenTest/src/: CCodeGenTest.cpp  Image.cpp  Image.h  library.cpp  library.h  network.cpp  network.h
tests/VTATestBundle/: CMakeLists.txt  VTABundle.cpp  VTABundle.h  vtaTestBundle.h  vtaTestBundleMain.cpp  vtaTestBundle_sample.cpp
tests/VTATestBundle/include/: tvm_comp.h
vta/: CMakeLists.txt
vta/bundles/: CMakeLists.txt
vta/bundles/AvgPoolTest/: CMakeLists.txt  vtaAvgPoolTestBundleMain.cpp
vta/bundles/BiRealNet/: CMakeLists.txt  VTASkipQuantizeNodes.txt  main.cpp
vta/bundles/BinaryNet/: CMakeLists.txt  main.cpp
vta/bundles/Conv2Test/: CMakeLists.txt  vtaConv2TestBundleMain.cpp
vta/bundles/Conv3Test/: CMakeLists.txt  vtaConv3TestBundleMain.cpp
vta/bundles/Conv4Test/: CMakeLists.txt  vtaConv4TestBundleMain.cpp
vta/bundles/Conv5Test/: CMakeLists.txt  vtaConv5TestBundleMain.cpp
vta/bundles/ConvTest/: CMakeLists.txt  vtaConvTestBundle.cpp  vtaConvTestBundle.h  vtaConvTestBundleMain.cpp
vta/bundles/Conv_inception_5b_5x5_1__1/: CMakeLists.txt  Conv_inception_5b_5x5_1__1BundleMain.cpp
vta/bundles/Dequantize/: CMakeLists.txt  vtaDequantizeTestBundle.cpp  vtaDequantizeTestBundle.h  vtaDequantizeTestBundleMain.cpp
vta/bundles/ElemAdd/: CMakeLists.txt  vtaElemAddTestBundle.cpp  vtaElemAddTestBundle.h  vtaElemAddTestBundleMain.cpp
vta/bundles/ElemDiv/: CMakeLists.txt  vtaElemDivTestBundle.cpp  vtaElemDivTestBundle.h  vtaElemDivTestBundleMain.cpp
vta/bundles/ElemSub/: CMakeLists.txt  vtaElemSubTestBundle.cpp  vtaElemSubTestBundle.h  vtaElemSubTestBundleMain.cpp
vta/bundles/FCTest/: CMakeLists.txt  vtaFCTestBundle.cpp  vtaFCTestBundle.h  vtaFCTestBundleMain.cpp
vta/bundles/FloatConvTest/: CMakeLists.txt  vtaFloatConvTestBundle.cpp  vtaFloatConvTestBundleMain.cpp
vta/bundles/MaxPool/: CMakeLists.txt  vtaMaxPoolTestBundle.cpp  vtaMaxPoolTestBundle.h  vtaMaxPoolTestBundleMain.cpp
vta/bundles/NonVTAConvTest/: CMakeLists.txt  vtaNonVTAConvTestBundle.cpp  vtaNonVTAConvTestBundle.h  vtaNonVTAConvTestBundleMain.cpp
vta/bundles/Quantize/: CMakeLists.txt  vtaQuantizeTestBundle.cpp  vtaQuantizeTestBundle.h  vtaQuantizeTestBundleMain.cpp
vta/bundles/ReluTest/: CMakeLists.txt  vtaReluTestBundle.cpp  vtaReluTestBundle.h  vtaReluTestBundleMain.cpp
vta/bundles/ResConv10Test/: CMakeLists.txt  (+2 more)
vta/multievta_bundles/: CMakeLists.txt
vta/tests/: CMakeLists.txt  NESTVTABackendTest.cpp
(+462 files in other folders)
