if (GLOW_WITH_BUNDLES)
  add_subdirectory(lenet_mnist)
  add_subdirectory(resnet50)
  add_subdirectory(resnet18)
  add_subdirectory(partition_net)
  add_subdirectory(vta_cpu_partition_net)
  add_subdirectory(resnet18_nhwc)
  add_subdirectory(bundle_with_multiple_entries)
  add_subdirectory(mobilenet)
endif()
